# CppReflection

./: CMakeLists.txt  LICENSE  README.md
Source/CppReflection/: module.json
Source/CppReflection/Private/: Class.cpp  main.cpp
Source/CppReflection/Private/Parser/: Cursor.cpp  Cursor.h  Unit.h  UnitVisitor.h  UnitVisitorPolicy.cpp  UnitVisitorPolicy.h  Utils.cpp
Source/CppReflection/Public/CppReflection/: Class.h  Macro.h  Object.h
Source/Example/: module.json
Source/Example/Private/: main.cpp
